app/assets/stylesheets/styles.css
body {
  margin: 0px;
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";

}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: black;
}

li {
  float: right;
  padding: .5%;
}

li a {
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

li a:hover:not(.main) {
  color: #4ba4c7;
}

input[type=text], input[type=password] {
  border: 2px solid #4ba4c7;
  border-radius: 4px;
  height: 30px;
  width: 100%;
}

input[type=submit] {
  padding:5px 15px; 
  background:#4ba4c7; 
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  border:0 none;
  cursor:pointer;
  -webkit-border-radius: 5px;
  border-radius: 5px; 
  font-size: .6em;
  height: 35px;
  width: 100%;
}

input[type=textarea] {
  width: 500px;
  height: 20px;
}

select {
  width: 100%;
  color: black;
  font-size: .75em;
}

.main {
  color: #4ba4c7;
  font-weight: bold;
}

.nav {
  font-size: 1.75em;
  vertical-align: middle;
  z-index: 1;
}

.container {
  text-align: center;
  border-radius: 20px;
  background-color: white;
  padding: 2%;
}

.cont {
  display: flex;
  justify-content: center;
  align-items: center;
}

.centered {
  /* position: fixed; */
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.brand {
  font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-style: italic;
}

.head {
  font-size: 3em;
}

.form {
  font-size: 1.75em;
}

.error {
  color:#e60000; 
  text-align: center;
}

.small {
  font-size: small;
  color: black;
  text-decoration: none;
}

.plain {
  color:#4ba4c7;
  text-decoration: none;
}

.splash {
  background-image: url("/assets/background.png");
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
}

.description {
  height: 500px;
  color:red;
}

